<resources>
    <string name="app_name">HostelBookingApp</string>
    <string name="helloWorld">Your Profile!</string>
    <string name="logout">Logout</string>
    <string name="your_name">Your Name</string>
    <string name="pp">pp</string>
    <string name="YourEmail">Your Email</string>
    <string name="phone">phone</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email_not_verified">Email Not Verified</string>
    <string name="verify_now">Verify Now</string>
    <string name="resetPassword">reset_password</string>
    <string name="go_to_main_page">Go To Main Page</string>
</resources>